<resources>
    <string name="app_name">盛昊智行</string>
    <string name="request_retry">请求失败，请稍后重试</string>
    <string name="agree_privacy">我已阅读并同意《隐私政策》，首次登录自动注册新账号</string>
    <string name="agree_privacy2">我已阅读并同意《隐私政策》</string>
    <string name="to_agree_privacy">请阅读并同意《隐私政策》</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="do_success">操作成功</string>
    <string name="acc_on">已开启</string>
    <string name="acc_off">已关闭</string>
    <string name="locationPermission">定位服务没有打开，可能无法发现蓝牙设备，请打开定位服务!</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="permissionCamera">拍摄照片视频和访问媒体权限说明\n用于扫码绑车、设备信息、头像信息上传等场景</string>
    <string name="permissionLocation">获取位置信息权限说明\n用于查看本人当前所在位置、定位、发现蓝牙等场景</string>
    <string name="virtual_mode">虚拟体验模式该功能无法使用！</string>
    <string name="haibao_sanlun">海宝三轮</string>
    <string name="riding_total_mileage">骑行总里程</string>
    <string name="completed">已完成</string>
    <string name="current_device">当前设备</string>
    <string name="one_year">1年</string>
    <string name="limited_time_offer">限时优惠</string>
    <string name="connect">连接</string>
    <string name="tianjin_store">天津市西津区1店</string>
    <string name="experience_sales">体验销售 保养维修</string>
    <string name="no_devices_found">未发现设备</string>
    <string name="no_data">暂无数据</string>
    <string name="control_system">控制系统</string>
    <string name="normal">正常</string>
    <string name="experience_mode">体验模式</string>
    <string name="voltage">电压</string>
    <string name="vehicle_start">车辆启动</string>
    <string name="current_status">当前状态：</string>
    <string name="not_started">未启动</string>
    <string name="defense_off">设防关</string>
    <string name="click_defense">点击设防</string>
    <string name="turn_on_headlights">开启大灯</string>
    <string name="find_vehicle">寻车</string>
    <string name="palm_move_car">掌上挪车</string>
    <string name="riding_records">骑行记录</string>
    <string name="total_mileage">总里程</string>
    <string name="last_trip">上次行程</string>
    <string name="vehicle_positioning">车辆定位</string>
    <string name="vehicle_condition">车况</string>
    <string name="vehicle_control">车控</string>
    <string name="electronic_fence">电子围栏</string>
    <string name="no_geofence_data">暂无电子围栏</string>
    <string name="outlet_query">网点查询</string>
    <string name="bluetooth_binding">蓝牙绑定</string>
    <string name="settings">设置</string>
    <string name="smart_service">智能服务</string>
    <string name="unlock_more_features">解锁更多智能功能</string>
    <string name="activate_now">立即开通</string>
    <string name="my_devices">我的设备</string>
    <string name="add">添加</string>
    <string name="service">服务</string>
    <string name="user_guide">用户指南</string>
    <string name="messages">消息</string>
    <string name="my_vehicle">爱车</string>
    <string name="mall">商城</string>
    <string name="edit">编辑</string>
    <string name="no_messages">暂无消息</string>
    <string name="select_time">选择时间</string>
    <string name="confirm">确定</string>
    <string name="mode_adjustment">模式一键调节</string>
    <string name="sport_mode">运动模式</string>
    <string name="standard_mode">标准模式</string>
    <string name="range_extender_mode">增程模式</string>
    <string name="loading">加载中...</string>
    <string name="bluetooth_params_setting">蓝牙参数设置</string>
    <string name="current_start_value">当前启动值：</string>
    <string name="current_lock_value">当前关锁值：</string>
    <string name="gear_selection">档位选择</string>
    <string name="weak">弱</string>
    <string name="connect_1m">连接1米</string>
    <string name="disconnect_3m">断开3米</string>
    <string name="medium">中</string>
    <string name="connect_2m">连接2米</string>
    <string name="disconnect_5m">断开5米</string>
    <string name="strong">强</string>
    <string name="connect_5m">连接5米</string>
    <string name="disconnect_10m">断开10米</string>
    <string name="slide_right_to_start">右滑启动</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="device_info_upload">设备信息上传</string>
    <string name="scan_manual_input">扫码/手动输入</string>
    <string name="ev_qr_code">电动车二维码或下方设备号</string>
    <string name="upload">上传</string>
    <string name="login_register">登录/注册</string>
    <string name="virtual_experience">虚拟体验</string>
    <string name="set_password">设置密码</string>
    <string name="complete">完成</string>
    <string name="account_security">账号与安全</string>
    <string name="account_bind_manage">账号绑定和管理</string>
    <string name="phone_number">手机号</string>
    <string name="change">更换</string>
    <string name="email">邮箱</string>
    <string name="login_password">登录密码</string>
    <string name="vehicle_management_policy">车辆管理政策与法规</string>
    <string name="upload_device_info">上传设备信息</string>
    <string name="current_version">当前版本</string>
    <string name="check_version_update">检查版本更新</string>
    <string name="feedback_complaint">反馈与投诉</string>
    <string name="dialog_title">弹窗名称</string>
    <string name="dialog_content">我是內容</string>
    <string name="haibao_electric_tricycle">海宝电动三轮车</string>
    <string name="please_bind_email_first">请先绑定邮箱！</string>
    <string name="bind">绑定</string>
    <string name="unbound">未绑定</string>
    <string name="add_geofence">添加围栏</string>
    <string name="geofence_range">围栏范围：</string>
    <string name="radius_min">100m</string>
    <string name="radius_max">10000m</string>
    <string name="geofence_center">围栏中心</string>
    <string name="geofence_center_hint">(支持手动选择围栏中心)</string>
    <string name="next_step">下一步</string>
    <string name="geofence_range_hint">围栏范围：至少在图上添加3个点</string>
    <string name="revoke">撤销</string>
    <string name="outlet_info">网点信息</string>
    <string name="no_info">暂无信息</string>
    <string name="alarm_setting">告警设置</string>
    <string name="battery_info">电池信息</string>
    <string name="remaining_power">剩余电量</string>
    <string name="cycle_count">循环次数</string>
    <string name="battery_temperature">电池温度</string>
    <string name="daily_power_consumption">今日耗电</string>
    <string name="battery_health">电池健康度</string>
    <string name="times_unit">次</string>
    <string name="temperature_unit">℃</string>
    <string name="percent_unit">%</string>
    <string name="bind_new_email">绑定新邮箱</string>
    <string name="bind_email_hint">绑定后，再次登录可直接使用邮箱和密码登录</string>
    <string name="find_password">找回密码</string>
    <string name="one_key_login">本机号码一键登录/注册</string>
    <string name="other_login_methods">其他登录方式</string>
    <string name="enter_email_address">请输入邮箱地址</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="verification_code_sent">验证码已发送至邮箱</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="current_phone_number">当前手机号</string>
    <string name="enter_new_phone_number">输入新手机号</string>
    <string name="verification_code_sent_to_phone">验证码已通过短信发送至</string>
    <string name="scan_bind_vehicle">扫码绑车</string>
    <string name="scan_or_manual_input">扫码或手动输入</string>
    <string name="enter_activation_code_or_device_number">请输入激活码或设备号</string>
    <string name="enter_vehicle_number">请输入车架号</string>
    <string name="enter_battery_count">请输入电池数量</string>
    <string name="discover_devices">发现设备</string>
    <string name="scanning_nearby_devices">正在搜索附近的设备(15s)</string>
    <string name="stay_close_during_search">搜索过程中请靠近设备</string>
    <string name="rediscover_devices">重新发现设备</string>
    <string name="bound_devices">已绑定设备</string>
    <string name="scheduled_charging">预约充电</string>
    <string name="defrost">一键除霜</string>
    <string name="email_password_login">邮箱密码登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="enter_password">请输入密码</string>
    <string name="charging_time">充电时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="daily_time">每天 %s</string>
    <string name="next_day_time">次日 %s</string>
    <string name="vehicle_info">车辆信息</string>
    <string name="status_adjustment">状态调节</string>
    <string name="speed_adjustment">速度调节</string>
    <string name="function_switch">功能开关</string>
    <string name="voltage_selection">电压选择</string>
    <string name="voltage_48v">48v</string>
    <string name="voltage_60v">60v</string>
    <string name="voltage_72v">72v</string>
    <string name="start_method">起步方式</string>
    <string name="comfort">舒适</string>
    <string name="standard">标准</string>
    <string name="sport">运动</string>
    <string name="reverse_start_method">倒车起步方式</string>
    <string name="anti_slip_strength">防溜坡强度调节</string>
    <string name="hill_descent_strength">陡坡缓降强度调节</string>
    <string name="forward_speed_adjustment">前进速度调节</string>
    <string name="reverse_speed_adjustment">倒车速度调节</string>
    <string name="forward_reverse">正反转</string>
    <string name="forward_rotation">正转</string>
    <string name="reverse_rotation">反转</string>
    <string name="start_method_2">启动方式</string>
    <string name="soft_start">软启动</string>
    <string name="hard_start">硬启动</string>
    <string name="other_switches">其他开关</string>
    <string name="p_gear_selection">P档选择</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="ebs_selection">EBS选择</string>
    <string name="cruise_selection">巡航选择</string>
    <string name="current_limit_setting">限流设置</string>
    <string name="mode_adjust">模式调节</string>
    <string name="factory_reset">恢复出厂设置</string>
    <string name="phone_login">手机号登录</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="share">共享</string>
    <string name="person_num">个用户</string>
    <string name="choose_share_way">选择邀请方式</string>
    <string name="share_way_qrcode">二维码邀请</string>
    <string name="share_way_account">账号/手机号分享</string>
    <string name="share_user">共享用户</string>
    <string name="share_limit">邀请已达上限</string>
    <string name="share_scan_hint">进入扫一扫功能共享设备</string>
    <string name="account_share_hint">请输入账号/手机号</string>
    <string name="find">查找</string>
    <string name="share_now">立即邀请</string>
    <string name="share_user_info">用户详情</string>
    <string name="cancel_share">取消共享</string>
    <string name="go_to_main_page">回到首页</string>
    <string name="has_invite">邀请成功</string>
    <string name="wait_for_agree">等待接受中</string>
    <string name="has_no_share_users">暂无用户一同使用设备</string>
    <string name="exit_share">退出共享</string>
    <string name="account">账号</string>
    <string name="note">备注</string>
    <string name="note_hint">请输入备注</string>
    <string name="permission">权限</string>
    <string name="member">成员</string>
    <string name="no_set">未设置</string>
    <string name="share_key_hint">接受邀请即可激活该车辆使用权</string>
    <string name="sure_reject">拒绝邀请?</string>
    <string name="sure_reject_hint">您确定要拒绝该邀请吗?\n拒绝后将不被授予访问权限</string>
    <string name="share_success">成功加入!</string>
    <string name="share_success_hint">您现在可以进入设备访问车辆了</string>
    <string name="someone_is_share">的共享</string>
    <string name="some_one_invite_you_to_share_car">%s邀请您加入%s车辆的共享</string>
    <string name="join">加入</string>
    <string name="has_agree">已同意</string>
    <string name="has_reject">已拒绝</string>
    <string name="nums_of_user">%d个用户</string>
    <string name="save">保存</string>
    <string name="share_key">共享钥匙</string>
    <string name="reject">拒绝</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="sys_msg">系统通知</string>
    <string name="no_msg">暂无消息</string>
    <string name="permission_for_camera">请您授权App使用相机和存储权限才能正常使用扫描二维码功能</string>
    <string name="input_no">输入设备号</string>
    <string name="some_permission_fail">获取部分权限成功，但部分权限未正常授予</string>
    <string name="permissions_fail">获取权限失败</string>
    <string name="terminal_no">设备号：</string>
    <string name="change_to_terminal">切换到该设备</string>
</resources>