<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titleBackBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_title_back"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llStep1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="24dp"
        android:visibility="visible"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_new_email"
            android:textColor="#e6000000"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/bind_email_hint"
            android:textColor="#99000000"
            android:textSize="12sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_weight="1"
            android:background="@drawable/bg_gray_edittext_radius_shape"
            android:hint="@string/enter_email_address"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="#FF181818"
            android:textColorHint="#66000000"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStep2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="24dp"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code"
            android:textColor="#e6000000"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/verification_code_sent"
            android:textColor="#99000000"
            android:textSize="12sp"
            />

       <com.shenghao.blesdkdemo.widget.VerificationCodeView
           android:id="@+id/verifyView"
           android:layout_width="match_parent"
           android:layout_marginTop="50dp"
           android:layout_height="50dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_verification_code"
        android:padding="13dp"
        android:enabled="false"
        android:gravity="center"
        android:background="@drawable/selector_scan_btn"
        android:layout_margin="24dp"
        android:textColor="#ffffffff"
        android:textSize="16sp"/>
</LinearLayout>