<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#FF181818"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/mode_adjustment" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#333333"
        android:lineSpacingExtra="3dp"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:checkedButton="@id/rb1">

       <androidx.appcompat.widget.AppCompatRadioButton
           android:id="@+id/rb1"
           android:layout_width="match_parent"
           android:padding="16dp"
           android:text="@string/sport_mode"
           android:background="@drawable/bg_dialog_edit"
           android:button="@null"
           android:drawableEnd="@drawable/custom_radio_button"
           android:textColor="#ff1a1a1a"
           android:textSize="14sp"
           android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb2"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:text="@string/standard_mode"
            android:background="@drawable/bg_dialog_edit"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button"
            android:textColor="#ff1a1a1a"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb3"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:text="@string/range_extender_mode"
            android:background="@drawable/bg_dialog_edit"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button"
            android:textColor="#ff1a1a1a"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_gray_cancel_radius_shape"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/submitTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_blue_ok_radius_shape"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>