<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titleBackBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_title_back"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password"
            android:textStyle="bold"
            android:textColor="#e6000000"
            android:textSize="24sp"
            android:layout_margin="30dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gray_edittext_radius_shape"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="#FF181818"
            android:textColorHint="#66000000"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gray_edittext_radius_shape"
            android:hint="@string/enter_verification_code"
                android:inputType="number"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="#FF181818"
                android:textColorHint="#66000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
            android:text="@string/get_verification_code"
                android:textColor="#ff1c70e6"
                android:textSize="14sp"
                android:layout_marginRight="16dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:padding="13dp"
            android:enabled="true"
            android:gravity="center"
            android:background="@drawable/selector_next_btn"
            android:layout_marginTop="24dp"
            android:textColor="#ffffffff"
            android:textSize="16sp"/>
    </LinearLayout>


</LinearLayout>