<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titleBackBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_title_back"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/change_phone_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llStep1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="24dp"
        android:visibility="visible"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_phone_number"
            android:textColor="#99000000"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="172****7382"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#e6000000"
            android:textSize="32sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="46dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_gray_edittext_radius_shape"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textColor="#ff777777"
                android:textSize="16sp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow_gray_down"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/enter_new_phone_number"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="#FF181818"
                android:textColorHint="#66000000"
                android:inputType="phone"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStep2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="24dp"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code"
            android:textColor="#e6000000"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvTip"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/verification_code_sent_to_phone"
            android:textColor="#99000000"
            android:textSize="12sp"
            />

       <com.shenghao.widget.VerificationCodeView
           android:id="@+id/verifyView"
           android:layout_width="match_parent"
           android:layout_marginTop="50dp"
           android:layout_height="50dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_verification_code"
        android:padding="13dp"
        android:enabled="false"
        android:gravity="center"
        android:background="@drawable/selector_scan_btn"
        android:layout_margin="24dp"
        android:textColor="#ffffffff"
        android:textSize="16sp"/>
</LinearLayout>