<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7F8FB"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titleBackBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_title_back"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_bind_manage"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_white_radius_shape"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:padding="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="#e6000000"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="172****7382"
                    android:textColor="#99000000"
                    android:textSize="12sp"
                    android:layout_marginTop="7dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="@drawable/bg_black_radius_shape4"
                android:textColor="#FF343A56"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#1A000000"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#e6000000"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未绑定"
                    android:textColor="#99000000"
                    android:textSize="12sp"
                    android:layout_marginTop="7dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvMailBind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_blue_ok_radius_shape"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:backgroundTint="#FFF57F2A"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:text="@string/bind_phone_number"
                android:textColor="#ffffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#1A000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp"
                android:text="@string/login_password"
                android:textColor="#e6000000"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tvPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="#99000000"
                android:textSize="12sp"
                android:gravity="center"
                android:drawableRight="@drawable/ic_enter_arrow"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>